fix spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -119,8 +119,8 @@ figcaption {
 }
 
 .content-title {
-  font-size: 2em;
-  margin-bottom: 2em;
+  font-size: 1.75em;
+  margin-bottom: 0.5em;
   text-align: center;
 }
 
